		After some more hacking, everything is finally stable enough
		to allow OpenBSD/mvme88k to be installed onto a disk image!
20090102	Optimizing the osiop SCSI device a bit; a default scripted
		install of OpenBSD/mvme88k has dropped from 30 minutes to 10.
		Fixing a bug which was caused by instructions like subu.co
		with a destination register of r0 being treated as nop.
		Various updates to make the source code build better on
		Linux (Ubuntu 8.10), and with GNU make.

==============  RELEASE 0.4.7  ==============

20090103	Implementing more M88K floating point instruction variants.
		Merging in some parts from the (old) experimental C++ branch:
		compiler detection (C++), po directory, Doxygen configuration,
		"make install" functionality, etc.
20090104	Attempting to reduce the "first-person"-ness of some parts of
		the documentation; adding a Thanks section to the intro.html
		page, where code contributions can be credited.
20090108	Continuing to merge in code from the C++ branch; more of the
		main GXemul class and the unit test framework have been
		incorporated now.
		Moving RELEASE.html to doc/.
20090109	Merging in everything from the C++ branch. In other words,
		_none_ of the legacy functionality currently works.
		Removing everything which has to do with userland emulation.
		Moving all thirdparty header files to src/include/thirdparty/.
		Removing the -E option. (-e is now the only option used for
		selecting which machine template to start with.)
20090110	Beginning on a M88K_CPUComponent class.
		Adding command line options -L and -l, to call the legacy
		-H and -h help, respectively.
		If an unknown template name is supplied to the -e option,
		the legacy old_main is called with the entire command line.
20090113	Moving the TODO file to doc/TODO.html, and merging in parts
		of the TODO file from the old C++ branch.
20090118	Machine component tree dumps are now automagically included
		in the HTML documentation for individual machines.